--- a/libAnneLeds/libAnneLeds.vcproj
+++ b/libAnneLeds/libAnneLeds.vcproj
@@ -97,6 +97,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="2"
+			UseOfMFC="0"
 			CharacterSet="1"
 			WholeProgramOptimization="1"
 			>
